@@ -378,12 +378,7 @@ public class DaemonConnector {
             LOGGER.debug("Starting daemon process: id = {}, workingDir = {}, daemonArgs: {}", daemonId, workingDir, command);
             ProcessBuilder.Redirect redirect = ProcessBuilder.Redirect.appendTo(parameters.daemonOutLog(daemonId).toFile());
             ProcessBuilder processBuilder = new ProcessBuilder();
-            processBuilder.environment()
-                    .put("JDK_JAVA_OPTIONS",
-                            "--add-opens java.base/java.io=ALL-UNNAMED " +
-                                    "--add-opens java.base/java.lang=ALL-UNNAMED " +
-                                    "--add-opens java.base/java.util=ALL-UNNAMED " +
-                                    "--add-opens java.base/sun.nio.fs=ALL-UNNAMED");
+            processBuilder.environment().put(Environment.JDK_JAVA_OPTIONS.getEnvironmentVariable(), parameters.jdkJavaOpts());
             Process process = processBuilder
                     .directory(workingDir.toFile())
                     .command(args)
